--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@ logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   PhD researcher at the university of Groningen 
   Faculty of Science and Engineering -- Bernoulli institue 
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <br>
+  <a href="https://nl.linkedin.com/in/paul-wijnbergen-87494155">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
