--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Paul Wijnbergen # your name (or website title) here
-logo: "/images/IMG_3330.png?raw=true" # your photo (or logo) here
+logo: "/images/paul.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   PhD researcher at the university of Groningen 
   Faculty of Science and Engineering -- Bernoulli institue 
